--- a/index x.html
+++ b/index x.html
@@ -73,8 +73,7 @@
 		
             <a href="mailto:name@email.com">zxcv2318567@gmail.com</a>
           </div>
-          <p class="mb-5">7/30 is my birthday. At 19 years this year, I like to eat, dance, exercise, and walk. My personality is lively and I like to interact with everyone. The favorite idol is BTS. Their team spirit is what I want to learn.
-I have been to Japan, Hong Kong, South Korea, mainland China and other countries. The process of travel has taught me a lot. If I have the opportunity, you can go out and play with me!</p>
+          <p class="mb-5">Eat,Dance,Walk.世新資訊傳播學系</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.facebook.com/profile.php?id=100006799954791">
@@ -121,77 +120,43 @@ I have been to Japan, Hong Kong, South Korea, mainland China and other countries
             <div class="resume-content mr-auto">
               <h3 class="mb-0">High school</h3>
               <div class="subheading mb-3">SMHS 私立海星中學</div>
-              <p>The school was founded in 1959 by Sisters of the Roman Union of the Order of Saint Ursula (established in 1535), at the invitation of Archbishop Verineux of Hualien diocese and the local government. At that time, economic conditions in Taiwan were still undeveloped. Hualien, at the “back of the mountains” suffered from an inconvenient location and lacked resources to develop its local economy.  Thus, the Sisters followed the spirit of the Gospel to make a “preferential option for the poor” and invited the Ursulines worldwide to cooperate.  Many Ursuline school children in Europe, saved their pocket money, gradually collecting French francs, just to help establish an Ursuline school in Taiwan , which was very far away from them.
-Women’s education is part of the mission of the Roman Union of the Order of Saint Ursula.  Through its conviction that “Life transmits life: love nourishes love”, the Institute endeavors to fully educate well-integrated young women, capable of taking up the responsibility of becoming a stable force in society and fostering family life as the basic strength of that society.  The early establishment of Stella Maris Girl’s Junior High School was a response to the insufficiency and inequality of women’s education.  A High School was added to it three years later, and the school was renamed Stella Maris Girl’s High School.  In 1970, in accordance with the social and environmental trends and the request of the Archbishop the school started to recruit boys, and changed its name to the current one: Stella Maris High School.
-
-Stella Maris High School is the first private school to offer a high standard of education to students in eastern Taiwan.  With its focus firmly placed on whole person education concepts, respect for Catholic educational goals, and educational concepts of respect, freedom, and love, the school makes every effort to fulfill students’ potential and develop their personality. Gradually, in accordance with Taiwan
-’s economic development, the school adjusted its structures.  It established a Kindergarten Teachers’ Department and Dress and Fashion Department in 1976, Arts and Craft Department in 1987, and the Information Systems and Integrated High School in 1996.  The scope of Stella Maris High School has gradually evolved to completeness. </p>
+              <p>直升高中 普忠班</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">June 2017-end</span>
+              <span class="text-primary">March 2013 - Present</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">大學</h3>
-              <div class="subheading mb-3">SHU ICS 世新大學</div>
-              <p>參加 系上籃球隊 擔任中鋒。和系上同學和學姊們一起練習增加對籃球的技術
-			  Established in 1956. Upgraded in 1991. Renamed in 1997.
-
-The University has an undergraduate day program, an undergraduate night program, along with master’s and doctoral programs. To meet the needs of people who are already working but wish to continue their education, the University offers continuing education programs leading to bachelor, master’s, and doctoral degrees, along with a special undergraduate program for graduates of three-year vocational colleges.
-
-An overview of the University’s colleges and departments:
-
-1. College of Journalism and Communications
-Ph.D. Program of Communications; Department of Journalism (including master’s program); Department of Radio, Television and Film (radio track, television track, and film track; including master’s program); Department of Public Relations and Advertising (including master’s program); Department of Graphic Communications and Publishing (including master’s program); Department of Speech Communications (including master’s program); Department of Information and Communications (including master’s program); Department of Digital Multimedia Arts; Department of Communications Management (including master’s program).
-
-2. College of Management
-Department of Information Management (including master’s program); Department of Tourism (hospitality management track, travel and recreation planning track; including master’s program); Department of Economics (including master’s program); Department of Finance (including master’s program); Department of Public Policy and Management (including doctoral and master’s programs); Department of Business Administration (including master’s program).
-
-3. College of Humanities and Social Sciences
-Graduate Institute for Social Transformation Studies (master’s program); Graduate Institute for Gender Studies (master’s program); Department of Social Psychology (including master’s program); Department of English (including master’s program); Department of Chinese Literature (including master’s program); Department of Japanese Language and Literature.
-
-4. School of Law
-Graduate Institute for Intellectual Property Rights Program; Department of Law (including master’s program).
-
-In order to cultivate a broad worldview and up-to-date skills in students, the University is working hard to develop cooperative arrangements and exchanges with international academic and research institutions. It has already established sister school relationships with more than one hundred schools in Europe, the United States, Japan, Korea, Southeast Asia, and China; academic cooperation and student exchanges with these institutions are ongoing. The wide variety of exciting extracurricular activities that Shih Hsin students throw themselves into is another distinctive feature of the University. Besides seventeen departmental associations, extracurricular student organizations include academic, service-oriented, recreational, and social groups – a total of more than ninety to suit just about any interest. To encourage and help students in pursuing their education, the University provides a number of academic and need-based scholarships for which students can apply.
-
-1. Academic scholarships
-Students can apply for a range of nearly two hundred types of grants and scholarships, including those provided by the University itself – such as a scholarship offered to the top scorer on the entrance examination, overseas summer study scholarships, the She-Wo Scholarships honoring the University’s founder (awarded to the students with the four top academic records in each class) – as well as those offered by individuals, private organizations and public institutions, for sums ranging from NT$3,000 to NT$150,000.
-
-2. Financial Assistance
-In accordance with regulations set forth by the Ministry of Education, the University offers financial assistance for students who need such support. The amount of this assistance covers tuition, textbook purchases, training (lab) fees, pension funds, insurance, dormitory rental, and miscellaneous expenses.
-
-3. Scholarships:
-(1) Scholarships for financially constrained students (offering educational grants to children in low-income families).
-(2) Emergency grants (providing assistance for families experiencing sudden, unforeseen financial difficulties).
-			           </p>
+              <h3 class="mb-0">Web Developer</h3>
+              <div class="subheading mb-3">New User</div>
+              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">September 2017-start</span>
+              <span class="text-primary">December 2011 - March 2013</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">活動</h3>
-              <div class="subheading mb-3">國、高中</div>
-              <p>舉辦街頭表演募款、街頭募發票、偏鄉小學教育活動、中日海星交流會、接待國際姊妹校</p>
+              <h3 class="mb-0">Junior Web Designer</h3>
+              <div class="subheading mb-3">Shout! Media Productions</div>
+              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">July 2016-2017</span>
+              <span class="text-primary">July 2010 - December 2011</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">喜歡</h3>
-              <div class="subheading mb-3">It's Chi like</div>
-              <p>吃美食 eat food 、爬山 Climb、笑 Smile、玩遊戲 Play game</p>
+              <h3 class="mb-0">Web Design Intern</h3>
+              <div class="subheading mb-3">It's Chi style</div>
+              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">July 1999 - 2018</span>
+              <span class="text-primary">September 2008 - June 2010</span>
             </div>
           </div>
 
