--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <body id="page-top">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+    <nav class="navbar navbar-expand-lg navbar-info bg-dark fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Start Bootstrap</span>
         <span class="d-none d-lg-block">
@@ -41,7 +41,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="#about">About</a> 
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
@@ -67,13 +67,13 @@
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
           <h1 class="mb-0">Chi,Zhang
-            <span class="text-primary">Xenia</span>
+            <span class="text-danger">Xenia</span>
           </h1>
           <div class="subheading mb-5">1999 (18) Hualien City,Taiwan
 		
             <a href="mailto:name@email.com">zxcv2318567@gmail.com</a>
           </div>
-          <p class="mb-5">7/30 is my birthday. At 19 years this year, I like to eat, dance, exercise, and walk. My personality is lively and I like to interact with everyone. The favorite idol is BTS. Their team spirit is what I want to learn.
+          <p class="mb-2">7/30 is my birthday. At 19 years this year, I like to eat, dance, exercise, and walk. My personality is lively and I like to interact with everyone. The favorite idol is BTS. Their team spirit is what I want to learn.
 I have been to Japan, Hong Kong, South Korea, mainland China and other countries. The process of travel has taught me a lot. If I have the opportunity, you can go out and play with me!</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
@@ -115,106 +115,123 @@ I have been to Japan, Hong Kong, South Korea, mainland China and other countries
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
+		  <div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <h3 class="text-center">Xenia Experience Timeline </h3>
+      <p>
+        highschool - university
+      </p>
+      <ul class="timeline">
+        <li>
+          <div class="timeline-image">
+            <img class="maxresdefault" src="" alt="">
+          </div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h4>Step One</h4>
+              <h4 class="subheading">SMHS 私立海星中學</h4>
+            </div>
+            <div class="timeline-body">
+              <p class="text-muted">
+               位於花蓮縣，我的國中高中都在這裡度過，學校環境很大又很舒服。
+              </p>
+            </div>
+          </div>
+          <div class="line"></div>
+        </li>
+        <li class="timeline-inverted">
+          <div class="timeline-image">
+            <img class="" src="" alt="">
+          </div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h4>Step Two</h4>
+              <h4 class="subheading">SHU ICS 世新大學</h4>
+            </div>
+            <div class="timeline-body">
+              <p class="text-muted">
+                參加 系上籃球隊 擔任中鋒。和系上同學和學姊們一起練習增加對籃球的技術
+              </p>
+            </div>
+          </div>
+          <div class="line"></div>
+        </li>
+        <li>
+          <div class="timeline-image">
+            <img class="03" src="" alt="">
+          </div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h4>Step Three ：活動</h4>
+              <h4 class="subheading">國、高中</h4>
+            </div>
+            <div class="timeline-body">
+              <p class="text-muted">
+                舉辦街頭表演募款、街頭募發票、偏鄉小學教育活動、中日海星交流會、接待國際姊妹校
+              </p>
+            </div>
+          </div>
+          <div class="line"></div>
+        </li>
+        <li class="timeline-inverted">
+          <div class="timeline-image">
+            <img class="" src="" alt="">
+          </div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h4>Step Four ：喜歡</h4>
+              <h4 class="subheading">Chi like</h4>
+            </div>
+            <div class="timeline-body">
+              <p class="text-muted">
+                吃美食 eat food 、爬山 Climb、笑 Smile、玩遊戲 Play game
+              </p>
+            </div>
+          </div>
+          <div class="line"></div>
+        </li>
+        <li>
+          <div class="timeline-image">
+            <img class="" src="" alt="">
+          </div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h4>Bonus Step</h4>
+              <h4 class="subheading">Subtitle</h4>
+            </div>
+            <div class="timeline-body">
+              <p class="text-muted">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              </p>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+		  
 		  
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">High school</h3>
-              <div class="subheading mb-3">SMHS 私立海星中學</div>
-              <p>The school was founded in 1959 by Sisters of the Roman Union of the Order of Saint Ursula (established in 1535), at the invitation of Archbishop Verineux of Hualien diocese and the local government. At that time, economic conditions in Taiwan were still undeveloped. Hualien, at the “back of the mountains” suffered from an inconvenient location and lacked resources to develop its local economy.  Thus, the Sisters followed the spirit of the Gospel to make a “preferential option for the poor” and invited the Ursulines worldwide to cooperate.  Many Ursuline school children in Europe, saved their pocket money, gradually collecting French francs, just to help establish an Ursuline school in Taiwan , which was very far away from them.
-Women’s education is part of the mission of the Roman Union of the Order of Saint Ursula.  Through its conviction that “Life transmits life: love nourishes love”, the Institute endeavors to fully educate well-integrated young women, capable of taking up the responsibility of becoming a stable force in society and fostering family life as the basic strength of that society.  The early establishment of Stella Maris Girl’s Junior High School was a response to the insufficiency and inequality of women’s education.  A High School was added to it three years later, and the school was renamed Stella Maris Girl’s High School.  In 1970, in accordance with the social and environmental trends and the request of the Archbishop the school started to recruit boys, and changed its name to the current one: Stella Maris High School.
-
-Stella Maris High School is the first private school to offer a high standard of education to students in eastern Taiwan.  With its focus firmly placed on whole person education concepts, respect for Catholic educational goals, and educational concepts of respect, freedom, and love, the school makes every effort to fulfill students’ potential and develop their personality. Gradually, in accordance with Taiwan
-’s economic development, the school adjusted its structures.  It established a Kindergarten Teachers’ Department and Dress and Fashion Department in 1976, Arts and Craft Department in 1987, and the Information Systems and Integrated High School in 1996.  The scope of Stella Maris High School has gradually evolved to completeness. </p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">June 2017-end</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">大學</h3>
-              <div class="subheading mb-3">SHU ICS 世新大學</div>
-              <p>參加 系上籃球隊 擔任中鋒。和系上同學和學姊們一起練習增加對籃球的技術
-			  Established in 1956. Upgraded in 1991. Renamed in 1997.
-
-The University has an undergraduate day program, an undergraduate night program, along with master’s and doctoral programs. To meet the needs of people who are already working but wish to continue their education, the University offers continuing education programs leading to bachelor, master’s, and doctoral degrees, along with a special undergraduate program for graduates of three-year vocational colleges.
-
-An overview of the University’s colleges and departments:
-
-1. College of Journalism and Communications
-Ph.D. Program of Communications; Department of Journalism (including master’s program); Department of Radio, Television and Film (radio track, television track, and film track; including master’s program); Department of Public Relations and Advertising (including master’s program); Department of Graphic Communications and Publishing (including master’s program); Department of Speech Communications (including master’s program); Department of Information and Communications (including master’s program); Department of Digital Multimedia Arts; Department of Communications Management (including master’s program).
-
-2. College of Management
-Department of Information Management (including master’s program); Department of Tourism (hospitality management track, travel and recreation planning track; including master’s program); Department of Economics (including master’s program); Department of Finance (including master’s program); Department of Public Policy and Management (including doctoral and master’s programs); Department of Business Administration (including master’s program).
-
-3. College of Humanities and Social Sciences
-Graduate Institute for Social Transformation Studies (master’s program); Graduate Institute for Gender Studies (master’s program); Department of Social Psychology (including master’s program); Department of English (including master’s program); Department of Chinese Literature (including master’s program); Department of Japanese Language and Literature.
-
-4. School of Law
-Graduate Institute for Intellectual Property Rights Program; Department of Law (including master’s program).
-
-In order to cultivate a broad worldview and up-to-date skills in students, the University is working hard to develop cooperative arrangements and exchanges with international academic and research institutions. It has already established sister school relationships with more than one hundred schools in Europe, the United States, Japan, Korea, Southeast Asia, and China; academic cooperation and student exchanges with these institutions are ongoing. The wide variety of exciting extracurricular activities that Shih Hsin students throw themselves into is another distinctive feature of the University. Besides seventeen departmental associations, extracurricular student organizations include academic, service-oriented, recreational, and social groups – a total of more than ninety to suit just about any interest. To encourage and help students in pursuing their education, the University provides a number of academic and need-based scholarships for which students can apply.
-
-1. Academic scholarships
-Students can apply for a range of nearly two hundred types of grants and scholarships, including those provided by the University itself – such as a scholarship offered to the top scorer on the entrance examination, overseas summer study scholarships, the She-Wo Scholarships honoring the University’s founder (awarded to the students with the four top academic records in each class) – as well as those offered by individuals, private organizations and public institutions, for sums ranging from NT$3,000 to NT$150,000.
-
-2. Financial Assistance
-In accordance with regulations set forth by the Ministry of Education, the University offers financial assistance for students who need such support. The amount of this assistance covers tuition, textbook purchases, training (lab) fees, pension funds, insurance, dormitory rental, and miscellaneous expenses.
-
-3. Scholarships:
-(1) Scholarships for financially constrained students (offering educational grants to children in low-income families).
-(2) Emergency grants (providing assistance for families experiencing sudden, unforeseen financial difficulties).
-			           </p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2017-start</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">活動</h3>
-              <div class="subheading mb-3">國、高中</div>
-              <p>舉辦街頭表演募款、街頭募發票、偏鄉小學教育活動、中日海星交流會、接待國際姊妹校</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">July 2016-2017</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">喜歡</h3>
-              <div class="subheading mb-3">It's Chi like</div>
-              <p>吃美食 eat food 、爬山 Climb、笑 Smile、玩遊戲 Play game</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">July 1999 - 2018</span>
-            </div>
-          </div>
-
-        </div>
-
-      </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
-          <h2 class="mb-5">Education</h2>
+          <h2 class="mb-5">Introduce</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <h3 class="mb-0">My favorite band</h3>
+              <div class="subheading mb-3">BTS</div>
+              <div>防彈少年團 <br>（韓語：방탄소년단／防彈少年團；日語：防弾少年団／ぼうだんしょうねんだん）</div>
+              <br> 由Jin、SUGA、j-hope、RM、Jimin、V、Jung Kook七名成員組成，隸屬Big Hit娛樂經紀公司旗下
+			  <p>涵義為「阻擋像子彈一樣的批評與時代偏見的音樂團體」，也增添了「Beyond The Scene」超越現狀的意思</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2006 - May 2010</span>
             </div>
           </div>
-
+<p class="bg-info">...</p>
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">James Buchanan High School</h3>
