--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+            <a class="nav-link js-scroll-trigger" href="#education">Introduce</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+            <a class="nav-link js-scroll-trigger" href="#skills">Interests</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+            <a class="nav-link js-scroll-trigger" href="#interests">LIFE</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
@@ -75,7 +75,8 @@
           </div>
           <p class="mb-2">7/30 is my birthday. At 19 years this year, I like to eat, dance, exercise, and walk. My personality is lively and I like to interact with everyone. The favorite idol is BTS. Their team spirit is what I want to learn.
 I have been to Japan, Hong Kong, South Korea, mainland China and other countries. The process of travel has taught me a lot. If I have the opportunity, you can go out and play with me!</p>
-          <ul class="list-inline list-social-icons mb-0">
+          <br>
+		  <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.facebook.com/profile.php?id=100006799954791">
                 <span class="fa-stack fa-lg">
@@ -125,7 +126,7 @@ I have been to Japan, Hong Kong, South Korea, mainland China and other countries
       <ul class="timeline">
         <li>
           <div class="timeline-image">
-            <img class="maxresdefault" src="" alt="">
+            <img class="SmhsMark1" src="http://www.smhs.hlc.edu.tw/smhs/about_smhs/4.html" >
           </div>
           <div class="timeline-panel">
             <div class="timeline-heading">
@@ -180,12 +181,12 @@ I have been to Japan, Hong Kong, South Korea, mainland China and other countries
           </div>
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h4>Step Four ：喜歡</h4>
-              <h4 class="subheading">Chi like</h4>
+              <h4>Step Four ：now</h4>
+              <h4 class="subheading">目標</h4>
             </div>
             <div class="timeline-body">
               <p class="text-muted">
-                吃美食 eat food 、爬山 Climb、笑 Smile、玩遊戲 Play game
+                Find my road
               </p>
             </div>
           </div>
@@ -197,12 +198,12 @@ I have been to Japan, Hong Kong, South Korea, mainland China and other countries
           </div>
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h4>Bonus Step</h4>
-              <h4 class="subheading">Subtitle</h4>
+              <h4>Step Five ：Future</h4>
+              <h4 class="subheading">目標</h4>
             </div>
             <div class="timeline-body">
               <p class="text-muted">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Do what I say,say what I do.
               </p>
             </div>
           </div>
@@ -234,12 +235,12 @@ I have been to Japan, Hong Kong, South Korea, mainland China and other countries
 <p class="bg-info">...</p>
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
+              <h3 class="mb-0">SMHS High School</h3>
+              <div class="subheading mb-3">6 YEARS BE HERE</div>
+              <p>TIME : PAST</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">2001 - 2017</span>
             </div>
           </div>
 
@@ -248,103 +249,90 @@ I have been to Japan, Hong Kong, South Korea, mainland China and other countries
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
-          <h2 class="mb-5">Skills</h2>
+          <h2 class="mb-5">interests</h2>
 
-          <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <ul class="list-inline list-icons">
-            <li class="list-inline-item">
-              <i class="devicons devicons-html5"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-css3"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-javascript"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-jquery"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-sass"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-less"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-bootstrap"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-wordpress"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-grunt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-gulp"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-npm"></i>
-            </li>
-          </ul>
-
-          <div class="subheading mb-3">Workflow</div>
+          <div class="subheading mb-3"></div>
+		  <i class="fa fa-area-chart" style="font-size:50px;color:green"></i>
+		  <p> 我喜歡到處走走看看，比起用眼睛記起景色我更喜歡把它拍下來，雖然不會是最真實的，
+		  但在忘記時再看一下照片，就會記起那時的感動。
+		  <br>
+		  <br>
+		  <i class="fa fa-coffee" style="font-size:50px;color:brown"></i>
+		  <p> 現在不管是讀書還是工作，人們都喜歡待在咖啡廳，當然我自己也是，待在有咖啡香的地方
+		  會讓我特別舒服
+		  <br>
+		  <br>
+		  <i class="fa fa-fighter-jet" style="font-size:50px;color:blue"></i>
+		  <p> 到了可以到處跑的年紀的時候，就很喜歡出去旅行，不管是觀光還是遊玩，離開自己熟悉的土地，
+		  進入一個陌生的地方，探討他們的文化建築，就覺得很新奇
+		  <br>
+		  <br>
+		  <i class="fa fa-paw" style="font-size:50px;color:purple"></i>
+		  <p> 我很喜歡小動物，最近也開始養了一隻刺蝟！我覺得在自己的空間裡面，有一隻寵物可以陪伴自己是很好的，
+		  雖然還得照顧他們，但也是種技能。
+        
+		<br>
+  
+  　　　　<tr>
+          <h2 class="mb-5" style="font-size:35px;color:Black">人生目標</h2>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
+              從15000英呎高空跳下</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
+              跟家人一起搭郵輪遊玩</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
+              去一次偶像簽名會</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
+              當個背包客到處旅行</li>
+			  <li>
+              <i class="fa-li fa fa-check"></i>
+              能去一次美國白宮或日本皇室</li>
           </ul>
         </div>
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
+          <h2 class="mb-5">LIFE</h2>
+          <p>Gods determine what you're going to be.人生的奮鬥目標決定你將成為怎樣的人。</p>
+          <p class="mb-0"> "You never walk alone" is my belief</p>
         </div>
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
           <h2 class="mb-5">Awards &amp; Certifications</h2>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-            <li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
-          </ul>
+         <table class="table">
+	<caption>Xenia Zhang</caption>
+   <thead>
+      <tr>
+         <th>名稱</th>
+         <th>獎項</th>
+      </tr>
+   </thead>
+   <tbody>
+      <tr>
+         <td>全國合唱比賽</td>
+         <td>全國第五名</td>
+      </tr>
+      <tr>
+         <td>全國鄉土合唱比賽</td>
+         <td>全國第四名</td>
+      </tr>
+	  <tr>
+         <td>拓凱</td>
+         <td>第七名</td>
+      </tr>
+	  <tr>
+         <td>校內國語文演講比賽</td>
+         <td>第二名</td>
+      </tr>
+   </tbody>
+</table>
         </div>
       </section>
 
