--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
           <p class="mb-2">7/30 is my birthday. At 19 years this year, I like to eat, dance, exercise, and walk. My personality is lively and I like to interact with everyone. The favorite idol is BTS. Their team spirit is what I want to learn.
 I have been to Japan, Hong Kong, South Korea, mainland China and other countries. The process of travel has taught me a lot. If I have the opportunity, you can go out and play with me!</p>
           <br>
+		  我是7/30獅子座的女生，個性開朗，喜歡嘗試新的事物，對於高的地方很有憧憬，最大的夢想就是可以從飛機上跳傘俯瞰風景，沒什麼特別擅長的特點，屬於各類平平的類型，但如果有機會還是想要多方面都嘗試。
+		  <br>
+		  <br>
 		  <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.facebook.com/profile.php?id=100006799954791">
@@ -173,38 +176,7 @@ I have been to Japan, Hong Kong, South Korea, mainland China and other countries
               </p>
             </div>
           </div>
-          <div class="line"></div>
-        </li>
-        <li class="timeline-inverted">
-          <div class="timeline-image">
-            <img class="" src="" alt="">
-          </div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h4>Step Four ：now</h4>
-              <h4 class="subheading">目標</h4>
-            </div>
-            <div class="timeline-body">
-              <p class="text-muted">
-                Find my road
-              </p>
-            </div>
-          </div>
-          <div class="line"></div>
-        </li>
-        <li>
-          <div class="timeline-image">
-            <img class="" src="" alt="">
-          </div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h4>Step Five ：Future</h4>
-              <h4 class="subheading">目標</h4>
-            </div>
-            <div class="timeline-body">
-              <p class="text-muted">
-                Do what I say,say what I do.
-              </p>
+
             </div>
           </div>
         </li>
@@ -299,7 +271,7 @@ I have been to Japan, Hong Kong, South Korea, mainland China and other countries
         <div class="my-auto">
           <h2 class="mb-5">LIFE</h2>
           <p>Gods determine what you're going to be.人生的奮鬥目標決定你將成為怎樣的人。</p>
-          <p class="mb-0"> "You never walk alone" is my belief</p>
+          <p class="mb-0"> 想做個國際志工，到貧荒地區服務，希望成為個有影響力的人，保護自己珍視的事物</p>
         </div>
       </section>
 
