--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
         </ul>
       </div>
     </nav>
-
+	
+<br>	
+<br>	
+<br>	
+	
     <div class="container-fluid p-0">
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
@@ -112,6 +116,12 @@ I have been to Japan, Hong Kong, South Korea, mainland China and other countries
                 </span>
               </a>
             </li>
+			<br>
+			<br>
+			<audio controls>
+  <source src="BTS JUNGKOOK -  Euphoria  Theme of LOVE YOURSELF 起 Wonder Lyrics [Color Coded_Han_Rom_Eng]" type="audio/ogg">
+  <source src="BTS JUNGKOOK -  Euphoria  Theme of LOVE YOURSELF 起 Wonder Lyrics [Color Coded_Han_Rom_Eng].mp3" type="audio/mpeg">
+</audio> <p> YOU CAN TRY TO LISTIN THE COMFORTABLE MUSIC!
           </ul>
         </div>
       </section>
@@ -129,7 +139,7 @@ I have been to Japan, Hong Kong, South Korea, mainland China and other countries
       <ul class="timeline">
         <li>
           <div class="timeline-image">
-            <img class="SmhsMark1" src="http://www.smhs.hlc.edu.tw/smhs/about_smhs/4.html" >
+            <img src="img/SmhsMark2.jpg" height="220px" >
           </div>
           <div class="timeline-panel">
             <div class="timeline-heading">
@@ -272,7 +282,10 @@ I have been to Japan, Hong Kong, South Korea, mainland China and other countries
           <h2 class="mb-5">LIFE</h2>
           <p>Gods determine what you're going to be.人生的奮鬥目標決定你將成為怎樣的人。</p>
           <p class="mb-0"> 想做個國際志工，到貧荒地區服務，希望成為個有影響力的人，保護自己珍視的事物</p>
-        </div>
+          <br>
+		  <img src="img/IMG_E2610.jpg"  height="480px"
+		  <p class="left"> 18歲時去民視參訪，參觀「幸福來了」劇場照
+		  </div>
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
