--- a/index.html
+++ b/index.html
@@ -121,7 +121,14 @@ I have been to Japan, Hong Kong, South Korea, mainland China and other countries
 			<audio controls>
   <source src="BTS JUNGKOOK -  Euphoria  Theme of LOVE YOURSELF 起 Wonder Lyrics [Color Coded_Han_Rom_Eng]" type="audio/ogg">
   <source src="BTS JUNGKOOK -  Euphoria  Theme of LOVE YOURSELF 起 Wonder Lyrics [Color Coded_Han_Rom_Eng].mp3" type="audio/mpeg">
-</audio> <p> YOU CAN TRY TO LISTIN THE COMFORTABLE MUSIC!
+</audio> 
+
+<style>
+p.oblique {
+    font-style: oblique; font-size: 25px;
+}
+</style>
+<span style="color:orange;"><p class="oblique">YOU CAN TRY TO LISTIN THE COMFORTABLE MUSIC!</span> </p>
           </ul>
         </div>
       </section>
