--- a/index.html
+++ b/index.html
@@ -77,10 +77,15 @@
 		
             <a href="mailto:name@email.com">zxcv2318567@gmail.com</a>
           </div>
-          <p class="mb-2">7/30 is my birthday. At 19 years this year, I like to eat, dance, exercise, and walk. My personality is lively and I like to interact with everyone. The favorite idol is BTS. Their team spirit is what I want to learn.
+          <p>
+          <font size="4" face="Comic Sans MS">
+           7/30 is my birthday. At 19 years this year, I like to eat, dance, exercise, and walk. My personality is lively and I like to interact with everyone. The favorite idol is BTS. Their team spirit is what I want to learn.
 I have been to Japan, Hong Kong, South Korea, mainland China and other countries. The process of travel has taught me a lot. If I have the opportunity, you can go out and play with me!</p>
           <br>
+		  <font size="5" face="Microsoft JhengHei">
 		  我是7/30獅子座的女生，個性開朗，喜歡嘗試新的事物，對於高的地方很有憧憬，最大的夢想就是可以從飛機上跳傘俯瞰風景，沒什麼特別擅長的特點，屬於各類平平的類型，但如果有機會還是想要多方面都嘗試。
+          </font>
+        </p>
 		  <br>
 		  <br>
 		  <ul class="list-inline list-social-icons mb-0">
