--- a/index.html
+++ b/index.html
@@ -328,6 +328,13 @@ p.oblique {
          <td>校內國語文演講比賽</td>
          <td>第二名</td>
       </tr>
+	  <tr>
+         <td>資傳系網站</td>
+         <td>
+<a href="https://xenia1999.github.io/icsbyxenia/">https://xenia1999.github.io/icsbyxenia/</a>
+		 </td>
+      </tr>
+     </tr>
    </tbody>
 </table>
         </div>
